[gd_scene load_steps=22 format=3 uid="uid://cwef8426rdoyn"]

[ext_resource type="Script" uid="uid://cke0kw8m05037" path="res://Player/rig.gd" id="1_wer68"]
[ext_resource type="PackedScene" uid="uid://bkjo4t42t7fht" path="res://Assets/3D_Assets/Character/CharacterRig.glb" id="1_ydo8n"]
[ext_resource type="PackedScene" uid="uid://dwbx1uv7bias3" path="res://Assets/3D_Assets/Character/Gear/Longsword.glb" id="3_ojd8b"]
[ext_resource type="PackedScene" uid="uid://db08w2ky0o8rk" path="res://Assets/3D_Assets/Character/Gear/Tall_Shield.glb" id="4_awthv"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vcvy3"]
animation = &"Dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_awthv"]
animation = &"Defeat"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ydo8n"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wer68"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ojd8b"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ydo8n")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_wer68")
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_32kt2"]
animation = &"Overhead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8s7l5"]
animation = &"OverheadRecover"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ojd8b"]
animation = &"Slash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_awthv"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_32kt2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8s7l5"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vcvy3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_icx30"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sy1xi"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_80s3x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r5mnt"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_32kt2"]
states/Dash/node = SubResource("AnimationNodeAnimation_vcvy3")
states/Dash/position = Vector2(396, -8)
states/Defeat/node = SubResource("AnimationNodeAnimation_awthv")
states/Defeat/position = Vector2(550, 22)
states/MoveSpace/node = SubResource("AnimationNodeBlendSpace1D_ojd8b")
states/MoveSpace/position = Vector2(396, 100)
states/Overhead/node = SubResource("AnimationNodeAnimation_32kt2")
states/Overhead/position = Vector2(561, 100)
states/OverheadRecover/node = SubResource("AnimationNodeAnimation_8s7l5")
states/OverheadRecover/position = Vector2(573, 221)
states/Slash/node = SubResource("AnimationNodeAnimation_ojd8b")
states/Slash/position = Vector2(396, 221)
transitions = ["Start", "MoveSpace", SubResource("AnimationNodeStateMachineTransition_awthv"), "MoveSpace", "Slash", SubResource("AnimationNodeStateMachineTransition_32kt2"), "Slash", "MoveSpace", SubResource("AnimationNodeStateMachineTransition_8s7l5"), "MoveSpace", "Overhead", SubResource("AnimationNodeStateMachineTransition_vcvy3"), "Overhead", "OverheadRecover", SubResource("AnimationNodeStateMachineTransition_icx30"), "OverheadRecover", "MoveSpace", SubResource("AnimationNodeStateMachineTransition_sy1xi"), "MoveSpace", "Dash", SubResource("AnimationNodeStateMachineTransition_80s3x"), "Dash", "MoveSpace", SubResource("AnimationNodeStateMachineTransition_r5mnt")]
graph_offset = Vector2(-187, -16)

[node name="Rig" type="Node3D"]
script = ExtResource("1_wer68")

[node name="CharacterRig" parent="." instance=ExtResource("1_ydo8n")]

[node name="Skeleton3D" parent="CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(0.0173592, 0.896204, -0.0156451)
bones/0/rotation = Quaternion(0.142877, 1.17986e-07, 1.70322e-08, 0.98974)
bones/1/rotation = Quaternion(-0.0526933, 0.00181229, 0.0272771, 0.998236)
bones/2/position = Vector3(1.72724e-09, 0.14337, 9.20074e-09)
bones/2/rotation = Quaternion(0.00384106, -0.00121525, -0.0270074, 0.999627)
bones/3/position = Vector3(6.29404e-10, 0.187119, -8.27419e-08)
bones/3/rotation = Quaternion(-0.195163, 0.0112902, -0.0389608, 0.979932)
bones/4/position = Vector3(-4.13598e-09, 0.0869422, -7.44366e-09)
bones/4/rotation = Quaternion(0.371049, -0.00493269, 0.11771, 0.921109)
bones/5/rotation = Quaternion(-0.0948566, -3.23749e-09, -6.7833e-08, 0.995491)
bones/6/rotation = Quaternion(-0.16942, -0.0220737, -0.0770204, 0.982282)
bones/7/position = Vector3(0.0173591, 0.896204, -0.0156449)
bones/7/rotation = Quaternion(-0.07722, -0.7444, -0.395923, 0.532119)
bones/8/position = Vector3(0.0173591, 0.896204, -0.015645)
bones/8/rotation = Quaternion(-0.0772199, 0.7444, 0.395923, 0.532119)
bones/9/position = Vector3(0.148503, 0.961891, -0.000336254)
bones/9/rotation = Quaternion(0.9991, -0.0119994, -0.0356003, -0.019684)
bones/10/position = Vector3(-1.89246e-08, 0.264589, 1.88686e-08)
bones/10/rotation = Quaternion(-2.06414e-08, -0.00508009, 1.12223e-08, 0.999987)
bones/11/position = Vector3(-2.29642e-08, 0.264589, -1.42922e-08)
bones/11/rotation = Quaternion(0.497458, -0.00464457, 0.00385833, 0.867467)
bones/12/position = Vector3(1.69944e-08, 0.224574, 1.44571e-08)
bones/12/rotation = Quaternion(8.13006e-09, -0.0040978, 2.8623e-08, 0.999992)
bones/13/position = Vector3(-1.12174e-08, 0.224574, 1.49323e-08)
bones/13/rotation = Quaternion(-0.633482, 0.0219646, -0.023759, 0.77308)
bones/14/position = Vector3(-1.16553e-08, 0.139878, -1.14529e-09)
bones/14/rotation = Quaternion(-0.000100792, 0.96746, -0.253024, -0.000382349)
bones/15/position = Vector3(-0.113785, 0.961891, -0.000336306)
bones/15/rotation = Quaternion(0.94496, -0.00451393, 0.0227787, 0.326359)
bones/16/position = Vector3(-8.13254e-09, 0.26492, -8.66179e-09)
bones/16/rotation = Quaternion(-8.54052e-09, 0.00446058, -2.48695e-08, 0.99999)
bones/17/position = Vector3(1.43005e-08, 0.26492, 5.8405e-09)
bones/17/rotation = Quaternion(0.478092, 0.00447215, -0.00269972, 0.878294)
bones/18/position = Vector3(5.21402e-09, 0.224915, 1.11423e-08)
bones/18/rotation = Quaternion(1.82432e-08, -0.00718662, 1.30406e-08, 0.999974)
bones/19/position = Vector3(-1.0482e-09, 0.224915, 1.47454e-08)
bones/19/rotation = Quaternion(-0.68362, -0.0276764, 0.00118775, 0.729312)
bones/20/position = Vector3(1.67243e-09, 0.139878, -8.80702e-09)
bones/20/rotation = Quaternion(-9.95428e-05, 0.96746, -0.253025, -0.000383086)
bones/21/position = Vector3(0.0309776, 1.4015, 0.0954958)
bones/21/rotation = Quaternion(-0.496588, -0.235836, -0.429377, 0.716532)
bones/22/position = Vector3(0.196014, 1.42645, 0.0285547)
bones/22/rotation = Quaternion(-0.0721177, 0.0265219, 0.989945, -0.118762)
bones/23/position = Vector3(-5.0307e-09, 0.142106, -6.09215e-08)
bones/23/rotation = Quaternion(1.20391e-07, -0.0633643, 2.87451e-08, 0.99799)
bones/24/position = Vector3(-5.63571e-08, 0.142106, 1.13577e-08)
bones/24/rotation = Quaternion(0.422472, -0.0720417, -0.193611, 0.88252)
bones/25/position = Vector3(-2.99329e-08, 0.125697, 1.56968e-08)
bones/25/rotation = Quaternion(6.25987e-08, 0.0462933, 2.54337e-08, 0.998928)
bones/26/position = Vector3(1.99255e-08, 0.125697, -6.64045e-09)
bones/26/rotation = Quaternion(-0.0203181, 0.0463099, -0.165299, 0.984946)
bones/28/rotation = Quaternion(0.702583, -0.000939797, -0.00133551, 0.7116)
bones/29/rotation = Quaternion(0.741121, 0.00218262, 0.00265399, 0.671363)
bones/30/rotation = Quaternion(0.325269, 0.890055, 0.295977, -0.119997)
bones/31/rotation = Quaternion(0.514882, -0.114149, 0.114483, 0.841879)
bones/32/rotation = Quaternion(0.592004, -0.0381351, -0.0906987, 0.799907)
bones/34/position = Vector3(-0.00316937, 0.0987207, 0.0147917)
bones/34/rotation = Quaternion(-0.0674701, 0.718446, 0.0663964, 0.689112)
bones/35/rotation = Quaternion(0.580803, -0.000891846, -0.0014975, 0.814042)
bones/36/rotation = Quaternion(0.682777, 0.00174519, 0.00256618, 0.73062)
bones/37/rotation = Quaternion(-0.00426507, 0.736714, 0.0394785, 0.675038)
bones/38/position = Vector3(-0.00622955, 0.0926415, -0.0236344)
bones/38/rotation = Quaternion(-0.109873, 0.743351, 0.0333505, 0.658973)
bones/39/rotation = Quaternion(0.630039, 0.00151967, 0.00237903, 0.776559)
bones/40/rotation = Quaternion(0.652643, -0.00308124, -0.00421055, 0.757647)
bones/41/rotation = Quaternion(-0.0684175, 0.72411, 0.0332339, 0.685477)
bones/42/position = Vector3(-0.00715371, 0.0679858, -0.0481984)
bones/42/rotation = Quaternion(-0.120913, 0.799109, 0.0358921, 0.587807)
bones/43/rotation = Quaternion(0.498693, -0.0202706, -0.0256952, 0.866161)
bones/44/rotation = Quaternion(0.715385, 0.0353061, 0.0573143, 0.695481)
bones/45/rotation = Quaternion(-0.129059, 0.728936, -0.025026, 0.67184)
bones/46/position = Vector3(-0.00530681, 1.40423, 0.0965495)
bones/46/rotation = Quaternion(-0.478826, 0.269921, 0.365195, 0.751333)
bones/47/position = Vector3(-0.162861, 1.45408, 0.0297198)
bones/47/rotation = Quaternion(-0.160021, -0.30564, 0.89754, 0.274589)
bones/48/position = Vector3(-2.19879e-08, 0.143357, 4.80631e-08)
bones/48/rotation = Quaternion(2.86926e-08, 0.00120597, 6.59616e-09, 0.999999)
bones/49/position = Vector3(1.84999e-08, 0.143357, 2.88325e-08)
bones/49/rotation = Quaternion(0.345499, 0.0125817, 0.225985, 0.910716)
bones/50/position = Vector3(-8.58399e-08, 0.127002, 3.37772e-08)
bones/50/rotation = Quaternion(-3.80921e-08, -0.0234555, -9.53046e-08, 0.999725)
bones/51/position = Vector3(1.24751e-07, 0.127002, 5.27679e-10)
bones/51/rotation = Quaternion(0.189676, -0.0235114, 0.0267077, 0.981202)
bones/52/rotation = Quaternion(-0.2563, 0.855859, 0.0299186, -0.448241)
bones/53/rotation = Quaternion(0.694912, 0.107145, -0.103548, 0.703488)
bones/54/rotation = Quaternion(0.741121, -0.00218275, -0.00265402, 0.671363)
bones/55/rotation = Quaternion(-0.325269, 0.890055, 0.295977, 0.119998)
bones/56/rotation = Quaternion(0.514882, 0.11415, -0.114483, 0.841879)
bones/57/rotation = Quaternion(0.592004, 0.0381347, 0.0906991, 0.799907)
bones/59/position = Vector3(0.00316936, 0.0987207, 0.0147919)
bones/59/rotation = Quaternion(0.138771, -0.704916, 0.15571, 0.677932)
bones/60/rotation = Quaternion(0.579984, 0.0462614, -0.0308755, 0.812727)
bones/61/rotation = Quaternion(0.682777, -0.00174713, -0.00256457, 0.73062)
bones/62/rotation = Quaternion(-0.00426534, -0.736714, -0.0394788, 0.675038)
bones/63/position = Vector3(0.00622956, 0.0926414, -0.0236344)
bones/63/rotation = Quaternion(0.104096, -0.719607, 0.186262, 0.660784)
bones/64/rotation = Quaternion(0.670693, 0.0163391, -0.0185663, 0.741323)
bones/65/rotation = Quaternion(0.692499, 0.00330367, 0.00403909, 0.7214)
bones/66/rotation = Quaternion(-0.0684177, -0.72411, -0.0332339, 0.685477)
bones/67/position = Vector3(0.00715366, 0.0679857, -0.0481984)
bones/67/rotation = Quaternion(0.108364, -0.768224, 0.166291, 0.608635)
bones/68/rotation = Quaternion(0.629954, 0.0295148, 0.017751, 0.775869)
bones/69/rotation = Quaternion(0.816678, -0.0439535, -0.0509861, 0.573155)
bones/70/rotation = Quaternion(-0.12906, -0.728937, 0.0250258, 0.67184)
bones/71/position = Vector3(0.124996, 1.32, 0.0166234)
bones/71/rotation = Quaternion(0.0313796, 0.573293, 0.818349, 0.0256093)
bones/72/position = Vector3(-0.114251, 1.33804, 0.0235706)
bones/72/rotation = Quaternion(0.0313796, 0.573293, 0.818349, 0.0256093)

[node name="Knight_01" parent="CharacterRig/GameRig/Skeleton3D" index="0"]
visible = false

[node name="Villager_01" parent="CharacterRig/GameRig/Skeleton3D" index="2"]
visible = false

[node name="Villager_02" parent="CharacterRig/GameRig/Skeleton3D" index="3"]
visible = false

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../CharacterRig")
tree_root = SubResource("AnimationNodeStateMachine_32kt2")
anim_player = NodePath("../CharacterRig/AnimationPlayer")
parameters/MoveSpace/blend_position = 0.145

[node name="RightHandBone" type="BoneAttachment3D" parent="."]
transform = Transform3D(-0.971412, -0.228325, -0.065018, 0.165809, -0.848531, 0.502497, -0.169902, 0.477351, 0.862131, -0.334442, 1.01862, -0.124092)
bone_name = "DEF-hand.R"
bone_idx = 51
use_external_skeleton = true
external_skeleton = NodePath("../CharacterRig/GameRig/Skeleton3D")

[node name="WeaponSlot" type="Node3D" parent="RightHandBone"]
unique_name_in_owner = true
transform = Transform3D(-2.23517e-08, 1.49012e-08, 1, 0.996195, 0.0871558, 0, -0.0871557, 0.996195, -1.19209e-07, -0.03, 0.075, -0.05)

[node name="Longsword" parent="RightHandBone/WeaponSlot" instance=ExtResource("3_ojd8b")]

[node name="LeftHandBone" type="BoneAttachment3D" parent="."]
transform = Transform3D(-0.876247, -0.473032, -0.0918268, 0.210647, -0.547426, 0.809909, -0.433381, 0.690337, 0.579323, 0.221007, 1.00836, 0.251547)
bone_name = "DEF-hand.L"
bone_idx = 26
use_external_skeleton = true
external_skeleton = NodePath("../CharacterRig/GameRig/Skeleton3D")

[node name="ShieldSlot" type="Node3D" parent="LeftHandBone"]
unique_name_in_owner = true
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, -0.045, -0.05, -0.06)

[node name="Tall_Shield" parent="LeftHandBone/ShieldSlot" instance=ExtResource("4_awthv")]

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]

[editable path="CharacterRig"]
